Update from https://github.com/thebesttv/eserver-static/commit/45c6446362e791201cabeb0dd99f04060e069a72

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-26 09:37 -->
+<!-- 2022-11-26 12:10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgae8dcc8">1. 妙妙文章</a>
+<li><a href="#orgf402840">1. 妙妙文章</a>
 <ul>
-<li><a href="#org3125eaa">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgbb8b699">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6f599ee">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgaec68cb">1.4. 关于编辑器</a></li>
-<li><a href="#org93c4ace">1.5. 关于代码</a>
+<li><a href="#org82d821d">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgdd10a4d">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org69024db">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org9afc544">1.4. 关于编辑器</a></li>
+<li><a href="#orge6b4223">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgc00d0e2">1.5.1. Lisp</a></li>
+<li><a href="#org8da5ff0">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgbe9056c">1.6. 关于CPU</a></li>
-<li><a href="#org7e70033">1.7. 关于算法</a>
+<li><a href="#org82f59bb">1.6. 关于CPU</a></li>
+<li><a href="#orgcb7b465">1.7. 关于算法</a>
 <ul>
-<li><a href="#org468108a">1.7.1. 关于随机</a></li>
+<li><a href="#org5bd7928">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgd11b858">1.8. 关于AI</a></li>
-<li><a href="#orgd4054e9">1.9. 关于软件</a>
+<li><a href="#orgd85863c">1.8. 关于AI</a></li>
+<li><a href="#orgc84450b">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgad3bee2">1.9.1. SQLite</a></li>
+<li><a href="#orga43676f">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org3c2c13d">1.10. 关于workflow</a></li>
+<li><a href="#orgebe848b">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org0bccf6a">2. 棒棒视频</a>
+<li><a href="#orgfcb5c73">2. 棒棒视频</a>
 <ul>
-<li><a href="#org3bfd25a">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgecb47b6">2.2. 迷因水母</a></li>
-<li><a href="#org57b7de1">2.3. 各种剧</a></li>
-<li><a href="#orgd37c04a">2.4. 电影</a></li>
+<li><a href="#orgcb7dc89">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org4cf4277">2.2. 迷因水母</a></li>
+<li><a href="#org1dc49a8">2.3. 各种剧</a></li>
+<li><a href="#org7a83ed3">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orga284fa3">3. 快乐游戏</a></li>
-<li><a href="#org95b1945">4. 宝藏博主</a></li>
-<li><a href="#org15844eb">5. 有意思的</a>
+<li><a href="#orge848e55">3. 快乐游戏</a></li>
+<li><a href="#org1a65c85">4. 宝藏博主</a></li>
+<li><a href="#org7ed8dcc">5. 有意思的</a>
 <ul>
-<li><a href="#org01699fd">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org02023dd">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org85e4144">6. 我想玩的</a></li>
+<li><a href="#org9318c0f">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgae8dcc8" class="outline-2">
-<h2 id="orgae8dcc8"><span class="section-number-2">1.</span> <a href="#orgae8dcc8">妙妙文章</a></h2>
+<div id="outline-container-orgf402840" class="outline-2">
+<h2 id="orgf402840"><span class="section-number-2">1.</span> <a href="#orgf402840">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgd9d5f25">
+<figure id="org78cc9a4">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -498,8 +498,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org3125eaa" class="outline-3">
-<h3 id="org3125eaa"><span class="section-number-3">1.1.</span> <a href="#org3125eaa">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org82d821d" class="outline-3">
+<h3 id="org82d821d"><span class="section-number-3">1.1.</span> <a href="#org82d821d">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -540,8 +540,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgbb8b699" class="outline-3">
-<h3 id="orgbb8b699"><span class="section-number-3">1.2.</span> <a href="#orgbb8b699">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgdd10a4d" class="outline-3">
+<h3 id="orgdd10a4d"><span class="section-number-3">1.2.</span> <a href="#orgdd10a4d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -571,8 +571,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6f599ee" class="outline-3">
-<h3 id="org6f599ee"><span class="section-number-3">1.3.</span> <a href="#org6f599ee">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org69024db" class="outline-3">
+<h3 id="org69024db"><span class="section-number-3">1.3.</span> <a href="#org69024db">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -606,8 +606,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgaec68cb" class="outline-3">
-<h3 id="orgaec68cb"><span class="section-number-3">1.4.</span> <a href="#orgaec68cb">关于编辑器</a></h3>
+<div id="outline-container-org9afc544" class="outline-3">
+<h3 id="org9afc544"><span class="section-number-3">1.4.</span> <a href="#org9afc544">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -623,8 +623,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org93c4ace" class="outline-3">
-<h3 id="org93c4ace"><span class="section-number-3">1.5.</span> <a href="#org93c4ace">关于代码</a></h3>
+<div id="outline-container-orge6b4223" class="outline-3">
+<h3 id="orge6b4223"><span class="section-number-3">1.5.</span> <a href="#orge6b4223">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -649,8 +649,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc00d0e2" class="outline-4">
-<h4 id="orgc00d0e2"><span class="section-number-4">1.5.1.</span> <a href="#orgc00d0e2">Lisp</a></h4>
+<div id="outline-container-org8da5ff0" class="outline-4">
+<h4 id="org8da5ff0"><span class="section-number-4">1.5.1.</span> <a href="#org8da5ff0">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -673,8 +673,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgbe9056c" class="outline-3">
-<h3 id="orgbe9056c"><span class="section-number-3">1.6.</span> <a href="#orgbe9056c">关于CPU</a></h3>
+<div id="outline-container-org82f59bb" class="outline-3">
+<h3 id="org82f59bb"><span class="section-number-3">1.6.</span> <a href="#org82f59bb">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -689,8 +689,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org7e70033" class="outline-3">
-<h3 id="org7e70033"><span class="section-number-3">1.7.</span> <a href="#org7e70033">关于算法</a></h3>
+<div id="outline-container-orgcb7b465" class="outline-3">
+<h3 id="orgcb7b465"><span class="section-number-3">1.7.</span> <a href="#orgcb7b465">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -709,8 +709,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org468108a" class="outline-4">
-<h4 id="org468108a"><span class="section-number-4">1.7.1.</span> <a href="#org468108a">关于随机</a></h4>
+<div id="outline-container-org5bd7928" class="outline-4">
+<h4 id="org5bd7928"><span class="section-number-4">1.7.1.</span> <a href="#org5bd7928">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -724,8 +724,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd11b858" class="outline-3">
-<h3 id="orgd11b858"><span class="section-number-3">1.8.</span> <a href="#orgd11b858">关于AI</a></h3>
+<div id="outline-container-orgd85863c" class="outline-3">
+<h3 id="orgd85863c"><span class="section-number-3">1.8.</span> <a href="#orgd85863c">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd4054e9" class="outline-3">
-<h3 id="orgd4054e9"><span class="section-number-3">1.9.</span> <a href="#orgd4054e9">关于软件</a></h3>
+<div id="outline-container-orgc84450b" class="outline-3">
+<h3 id="orgc84450b"><span class="section-number-3">1.9.</span> <a href="#orgc84450b">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -747,8 +747,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgad3bee2" class="outline-4">
-<h4 id="orgad3bee2"><span class="section-number-4">1.9.1.</span> <a href="#orgad3bee2">SQLite</a></h4>
+<div id="outline-container-orga43676f" class="outline-4">
+<h4 id="orga43676f"><span class="section-number-4">1.9.1.</span> <a href="#orga43676f">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -762,8 +762,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3c2c13d" class="outline-3">
-<h3 id="org3c2c13d"><span class="section-number-3">1.10.</span> <a href="#org3c2c13d">关于workflow</a></h3>
+<div id="outline-container-orgebe848b" class="outline-3">
+<h3 id="orgebe848b"><span class="section-number-3">1.10.</span> <a href="#orgebe848b">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org0bccf6a" class="outline-2">
-<h2 id="org0bccf6a"><span class="section-number-2">2.</span> <a href="#org0bccf6a">棒棒视频</a></h2>
+<div id="outline-container-orgfcb5c73" class="outline-2">
+<h2 id="orgfcb5c73"><span class="section-number-2">2.</span> <a href="#orgfcb5c73">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -833,8 +833,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org3bfd25a" class="outline-3">
-<h3 id="org3bfd25a"><span class="section-number-3">2.1.</span> <a href="#org3bfd25a">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgcb7dc89" class="outline-3">
+<h3 id="orgcb7dc89"><span class="section-number-3">2.1.</span> <a href="#orgcb7dc89">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -865,8 +865,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgecb47b6" class="outline-3">
-<h3 id="orgecb47b6"><span class="section-number-3">2.2.</span> <a href="#orgecb47b6">迷因水母</a></h3>
+<div id="outline-container-org4cf4277" class="outline-3">
+<h3 id="org4cf4277"><span class="section-number-3">2.2.</span> <a href="#org4cf4277">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -881,8 +881,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org57b7de1" class="outline-3">
-<h3 id="org57b7de1"><span class="section-number-3">2.3.</span> <a href="#org57b7de1">各种剧</a></h3>
+<div id="outline-container-org1dc49a8" class="outline-3">
+<h3 id="org1dc49a8"><span class="section-number-3">2.3.</span> <a href="#org1dc49a8">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -906,8 +906,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd37c04a" class="outline-3">
-<h3 id="orgd37c04a"><span class="section-number-3">2.4.</span> <a href="#orgd37c04a">电影</a></h3>
+<div id="outline-container-org7a83ed3" class="outline-3">
+<h3 id="org7a83ed3"><span class="section-number-3">2.4.</span> <a href="#org7a83ed3">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -933,7 +933,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgc6e14b8">
+<figure id="orgb44ab36">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -945,13 +945,14 @@ and exist, before it is generally received and practiced on.
 <li><a href="https://movie.douban.com/subject/35700395/">坠落</a> (最后的反转好可怕555)</li>
 <li><a href="https://movie.douban.com/subject/6893932/">壮志凌云2：独行侠</a> (爽片 top gun)</li>
 <li><a href="https://movie.douban.com/subject/35134230/">有史以来最棒的啤酒运送</a> ("真相不会伤害我们，谎言才会")</li>
+<li><a href="https://movie.douban.com/subject/25905044/">刺猬索尼克</a>, <a href="https://movie.douban.com/subject/35083986/">刺猬索尼克2</a></li>
 </ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orga284fa3" class="outline-2">
-<h2 id="orga284fa3"><span class="section-number-2">3.</span> <a href="#orga284fa3">快乐游戏</a></h2>
+<div id="outline-container-orge848e55" class="outline-2">
+<h2 id="orge848e55"><span class="section-number-2">3.</span> <a href="#orge848e55">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -981,8 +982,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org95b1945" class="outline-2">
-<h2 id="org95b1945"><span class="section-number-2">4.</span> <a href="#org95b1945">宝藏博主</a></h2>
+<div id="outline-container-org1a65c85" class="outline-2">
+<h2 id="org1a65c85"><span class="section-number-2">4.</span> <a href="#org1a65c85">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -993,7 +994,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org28666fe">
+<figure id="org5051cac">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1001,8 +1002,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org15844eb" class="outline-2">
-<h2 id="org15844eb"><span class="section-number-2">5.</span> <a href="#org15844eb">有意思的</a></h2>
+<div id="outline-container-org7ed8dcc" class="outline-2">
+<h2 id="org7ed8dcc"><span class="section-number-2">5.</span> <a href="#org7ed8dcc">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1034,8 +1035,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org01699fd" class="outline-3">
-<h3 id="org01699fd"><span class="section-number-3">5.1.</span> <a href="#org01699fd">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org02023dd" class="outline-3">
+<h3 id="org02023dd"><span class="section-number-3">5.1.</span> <a href="#org02023dd">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1047,8 +1048,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org85e4144" class="outline-2">
-<h2 id="org85e4144"><span class="section-number-2">6.</span> <a href="#org85e4144">我想玩的</a></h2>
+<div id="outline-container-org9318c0f" class="outline-2">
+<h2 id="org9318c0f"><span class="section-number-2">6.</span> <a href="#org9318c0f">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1070,8 +1071,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-26 09:36</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 09:37</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-26 12:09</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 12:10</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
