--- a/content/collections/contests.html
+++ b/content/collections/contests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-26 09:37 -->
+<!-- 2022-11-26 12:10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>一些有意思的比赛</title>
@@ -45,14 +45,14 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5d8f04e">1. ICFP</a></li>
+<li><a href="#orgfb0a69f">1. ICFP</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org5d8f04e" class="outline-2">
-<h2 id="org5d8f04e"><span class="section-number-2">1.</span> <a href="#org5d8f04e">ICFP</a></h2>
+<div id="outline-container-orgfb0a69f" class="outline-2">
+<h2 id="orgfb0a69f"><span class="section-number-2">1.</span> <a href="#orgfb0a69f">ICFP</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 仿佛是类似 ICPC 的比赛, 不过是加长的 72h 版.
@@ -77,7 +77,7 @@ PS. 看起来不少队伍都用 Rust, 有空说不定学一学.
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-22 20:07</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 09:37</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 12:10</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/contests.org">content/collections/contests.org</a></td></tr>
 </table>
