--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-26 09:37 -->
+<!-- 2022-11-26 12:10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge7bd506">1. 暑假</a>
+<li><a href="#org0636552">1. 暑假</a>
 <ul>
-<li><a href="#org9c16e73">1.1. 夏令营</a></li>
+<li><a href="#org2c2d906">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org76e4731">2. 打工</a></li>
-<li><a href="#orga7f19d1">3. 我的928</a>
+<li><a href="#orgc47c774">2. 打工</a></li>
+<li><a href="#org20d30a3">3. 我的928</a>
 <ul>
-<li><a href="#orgc80a872">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org19054b5">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orge1a6fed">4. 他们的928</a></li>
-<li><a href="#orgb5637b5">5. 总结</a></li>
+<li><a href="#org027957a">4. 他们的928</a></li>
+<li><a href="#orgbfbc930">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgb7dbd3f">
+<figure id="org3474b82">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orge7bd506" class="outline-2">
-<h2 id="orge7bd506"><span class="section-number-2">1.</span> <a href="#orge7bd506">暑假</a></h2>
+<div id="outline-container-org0636552" class="outline-2">
+<h2 id="org0636552"><span class="section-number-2">1.</span> <a href="#org0636552">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org9c16e73" class="outline-3">
-<h3 id="org9c16e73"><span class="section-number-3">1.1.</span> <a href="#org9c16e73">夏令营</a></h3>
+<div id="outline-container-org2c2d906" class="outline-3">
+<h3 id="org2c2d906"><span class="section-number-3">1.1.</span> <a href="#org2c2d906">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org76e4731" class="outline-2">
-<h2 id="org76e4731"><span class="section-number-2">2.</span> <a href="#org76e4731">打工</a></h2>
+<div id="outline-container-orgc47c774" class="outline-2">
+<h2 id="orgc47c774"><span class="section-number-2">2.</span> <a href="#orgc47c774">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orga7f19d1" class="outline-2">
-<h2 id="orga7f19d1"><span class="section-number-2">3.</span> <a href="#orga7f19d1">我的928</a></h2>
+<div id="outline-container-org20d30a3" class="outline-2">
+<h2 id="org20d30a3"><span class="section-number-2">3.</span> <a href="#org20d30a3">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgc80a872" class="outline-3">
-<h3 id="orgc80a872"><span class="section-number-3">3.1.</span> <a href="#orgc80a872">928演唱会(bushi</a></h3>
+<div id="outline-container-org19054b5" class="outline-3">
+<h3 id="org19054b5"><span class="section-number-3">3.1.</span> <a href="#org19054b5">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org9462974">
+<figure id="org3cd01dd">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org702b1fb">
+<figure id="org067dd8e">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge1a6fed" class="outline-2">
-<h2 id="orge1a6fed"><span class="section-number-2">4.</span> <a href="#orge1a6fed">他们的928</a></h2>
+<div id="outline-container-org027957a" class="outline-2">
+<h2 id="org027957a"><span class="section-number-2">4.</span> <a href="#org027957a">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb5637b5" class="outline-2">
-<h2 id="orgb5637b5"><span class="section-number-2">5.</span> <a href="#orgb5637b5">总结</a></h2>
+<div id="outline-container-orgbfbc930" class="outline-2">
+<h2 id="orgbfbc930"><span class="section-number-2">5.</span> <a href="#orgbfbc930">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 09:37</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 12:10</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
