--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-27 02:43 -->
+<!-- 2022-11-27 09:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,14 +45,15 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org80bc60c">1. 推送</a></li>
+<li><a href="#orgfbe0dd0">1. 推送</a></li>
+<li><a href="#orgbd78b39">2. Git</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org80bc60c" class="outline-2">
-<h2 id="org80bc60c"><span class="section-number-2">1.</span> <a href="#org80bc60c">推送</a></h2>
+<div id="outline-container-orgfbe0dd0" class="outline-2">
+<h2 id="orgfbe0dd0"><span class="section-number-2">1.</span> <a href="#orgfbe0dd0">推送</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -61,13 +62,28 @@
 </ul>
 </div>
 </div>
+
+<div id="outline-container-orgbd78b39" class="outline-2">
+<h2 id="orgbd78b39"><span class="section-number-2">2.</span> <a href="#orgbd78b39">Git</a></h2>
+<div class="outline-text-2" id="text-2">
+<ul class="org-ul">
+<li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
+可视化 Git 历史, 很有意思
+<ul class="org-ul">
+<li>还有人拿它来可视化论坛的帖子:
+<a href="https://edgeryders.eu/t/visualizing-our-7-years-of-online-dialogue-with-gource/11905">Visualizing our 7 years of online dialogue with Gource</a></li>
+<li><a href="https://gist.github.com/Gnzlt/a2bd6551f0044a673e455b269646d487">gourcevideo.sh</a> 使用 ffmpeg 将 Gource 的 PPM 输出编码成 mp4</li>
+</ul></li>
+</ul>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-22 20:14</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-27 02:43</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:19</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-27 09:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
